Many fixes and cleanups. Dock mode should actually act right BEHIND the scenes too.

--- a/stylesheets/bigbook.css
+++ b/stylesheets/bigbook.css
@@ -349,7 +349,7 @@ body.dock
 }*/
 
 .dock .bookPhrases {
-	border: 0px solid green;
+	border: 1px solid green;
 	/*color: rgba(250, 250, 250, 0.0);*/
 	/*margin-top: 1em;
 	margin-bottom: 1em;
@@ -370,7 +370,7 @@ body.dock
 }
 
 .dock .bookPhrasesEffects {
-	border: 0px solid blue;
+	border: 1px solid blue;
 	color: rgba(250, 250, 250, 0.0);
 	/*width: 100%;*/
 	/*font-size: 24px;
